objects/project_cloud__Financial_Snapshot_Unit__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Actual_CAPEX__c</fullName>
        <inlineHelpText>This field will show users the actual CAPEX amount captured in the Financial Snapshot.</inlineHelpText>
        <label>Actual Amount - CAPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Actual_OPEX__c</fullName>
        <inlineHelpText>This field will show users the actual OPEX amount captured in the Financial Snapshot.</inlineHelpText>
        <label>Actual Amount - OPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Actual__c</fullName>
        <inlineHelpText>This field will show users the actual amount captured in the Financial Snapshot.</inlineHelpText>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Budgeted_CAPEX__c</fullName>
        <inlineHelpText>This field will show users the budgeted CAPEX amount captured in the Financial Snapshot.</inlineHelpText>
        <label>Budgeted Amount - CAPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Budgeted_OPEX__c</fullName>
        <inlineHelpText>This field will show users the budgeted OPEX amount captured in the Financial Snapshot.</inlineHelpText>
        <label>Budgeted Amount - OPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Budgeted__c</fullName>
        <inlineHelpText>This field will show users the budgeted amount captured in the Financial Snapshot.</inlineHelpText>
        <label>Budgeted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Cost_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will allow to link Cost Areas to the Financial Snapshot</inlineHelpText>
        <label>Cost Area</label>
        <referenceTo>project_cloud__Area__c</referenceTo>
        <relationshipLabel>Financial Snapshot Units</relationshipLabel>
        <relationshipName>Financial_Snapshot_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Date__c</fullName>
        <inlineHelpText>This field will show the date that the financial snapshot was captured.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Financial_Snapshot__c</fullName>
        <inlineHelpText>This field shows the Financial Snapshot that the Financial Snapshot Unit is related too.</inlineHelpText>
        <label>Financial Snapshot</label>
        <referenceTo>project_cloud__Financial_Snapshot__c</referenceTo>
        <relationshipLabel>Financial Snapshot Units</relationshipLabel>
        <relationshipName>Financial_Snapshot_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Financial Snapshot Unit</label>
    <nameField>
        <displayFormat>FSU-{0}</displayFormat>
        <label>Financial Snapshot Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Snapshot Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>